# sandboxia

./: .coderabbit.yaml  .gitignore  .mcp.json  CLAUDE.md  README.md
.claude/agents/: rag-evaluator.md
.claude/commands/: rag-eval.md
.claude/skills/client-conventions/: SKILL.md
.github/workflows/: deploy-server.yml
client/: .env.example  .gitignore  .npmrc  .prettierrc  CLAUDE.md  README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
client/src/: middleware.ts  proxy.ts
doc/: Agents_Tools.md  Application_Form.md  DB_SCHEMA_MAPPING.md  PRD.md  R2_Performance_Improvement.md  Tools.md  logic.md
doc/Presentation_Final/: index.html  script.md
doc/Presentation_Mid/: architecture.mmd  data_flow.mmd  중간발표_대본.md  중간발표_슬라이드.md  중간보고_발표자료.md
doc/development/: Agents_Tools.md  DB_SCHEMA_MAPPING.md  Tools.md  Vibe_Coding.md
doc/evaluation/: R2_Performance_Improvement.md  R3_eval.md
doc/planning/: Application_Form.md  PRD.md
doc/portfolio/: Agents.md  Portfolio.md
server/: .dockerignore  .env.example  .gitignore  .pylintrc  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
server/app/: __init__.py  main.py
server/app/agents/: __init__.py
server/app/agents/application_drafter/: README.md  __init__.py  form_schema.py  graph.py  nodes.py  prompts.py  state.py
server/app/agents/eligibility_evaluator/: __init__.py  graph.py  nodes.py  prompts.py  schemas.py  state.py  tools.py
server/app/agents/sample_calculator/: graph.py  tools.py
server/app/agents/sample_researcher/: __init__.py  graph.py  tools.py
server/app/agents/sample_supervisor/: graph.py
server/app/agents/service_structurer/: __init__.py  graph.py  nodes.py  prompts.py  state.py  tools.py
server/app/agents/track_recommender/: __init__.py  graph.py  nodes.py  prompts.py  state.py  tools.py
server/app/agents/utils/: __init__.py  streaming.py
server/app/api/: deps.py
server/app/api/routes/: __init__.py  agent_progress.py  agents.py  documents.py  eligibility.py  files.py  projects.py  sample.py  users.py
server/app/api/schemas/: __init__.py  agent_progress.py  agents.py  sample.py
server/app/api/utils/: __init__.py  streaming.py
server/app/core/: config.py  constants.py  llm.py  progress_store.py
server/app/data/canonical/: README.md  mapping.json  schema.json
server/app/data/form/: counseling.json  demonstration.json  fastcheck.json  temporary.json
server/app/db/: __init__.py  export.py  vector.py
server/app/rag/: __init__.py  config.py
server/app/rag/chunkers/: __init__.py  base.py  r3_law.py  utils.py
server/app/rag/collectors/: __init__.py  r3_law.py
server/app/services/: __init__.py  document_generator.py  draft_service.py  eligibility_service.py  law_api.py  project_service.py  sample.py  structure_service.py  track_service.py  utils.py
server/app/services/parsers/: __init__.py  hwp_parser.py  hwp_patterns.py
server/app/templates/: demonstration-1.docx  demonstration-2.docx  demonstration-3.docx  demonstration-4.docx  fastcheck-1.docx  fastcheck-2.docx  temporary-1.docx  temporary-2.docx  temporary-3.docx  temporary-4.docx
server/app/tools/shared/: __init__.py
server/app/tools/shared/rag/: __init__.py  case_rag.py  domain_law_rag.py  regulation_rag.py
server/eval/: __init__.py  llm_metrics.py  metrics.py
server/eval/r1/: R1_RAG_성능고도화_요약.md  common.py  query_rewriter.py  reranker.py  run_evaluation.py  run_llm_evaluation.py
server/eval/r1/configs/: chunking.yaml  embedding.yaml
server/eval/r1/datasets/: evaluation_set.json
server/eval/r1/doc/: RAG_PERFORMANCE_REPORT.md
server/eval/r1/results/llm/: 2026-02-25_E1.json  2026-02-25_E1_keywords.json  2026-02-26_E1_track_prefix.json
server/eval/r1/results/retrieval/: 2026-02-20_baseline.json  2026-02-20_embedding_E1.json  2026-02-20_embedding_E2.json  2026-02-20_topk_10.json  2026-02-20_topk_3.json  2026-02-20_topk_5.json  2026-02-23_chunking_C6.json  2026-02-23_hybrid_0.5.json  2026-02-23_hybrid_0.8.json  2026-02-25_embedding_E0.json  2026-02-25_embedding_E1.json  2026-02-25_embedding_E2.json  2026-02-25_hybrid_0.5.json  2026-02-25_hybrid_0.8.json  2026-02-25_query_rewriting.json  2026-02-25_topk_10.json  2026-02-25_topk_3.json  2026-02-26_rerank_test.json
server/eval/r2/: README.md  cases_summary.csv  common.py  compare_results.py  evaluation_set.json  generate_evaluation_set.py  run_evaluation.py  run_llm_evaluation.py
server/eval/r2/configs/: embedding.yaml
server/eval/r2/results/retrieval/: 2026-02-11_baseline.json
server/eval/r3/: __init__.py  common.py  run_evaluation.py  run_llm_evaluation.py
server/eval/r3/configs/: chunking.yaml  embedding.yaml  hybrid.yaml
server/eval/r3/datasets/: evaluation_set.json
server/eval/r3/results/retrieval/: 2026-02-11_baseline.json  2026-02-12_chunking_C0.json  2026-02-12_chunking_C1.json  2026-02-12_chunking_C2.json  2026-02-12_chunking_C3.json  2026-02-12_chunking_C4.json  2026-02-12_chunking_C5.json  2026-02-12_chunking_C6.json  2026-02-13_chunking_C0.json  2026-02-13_chunking_C1.json  2026-02-13_chunking_C2.json  2026-02-13_chunking_C3.json  2026-02-13_chunking_C4.json  2026-02-13_chunking_C5.json  2026-02-13_chunking_C6.json  2026-02-19_chunking_C0.json  2026-02-19_chunking_C1.json  2026-02-19_chunking_C2.json  2026-02-19_chunking_C3.json  2026-02-19_chunking_C4.json  2026-02-19_chunking_C5.json  2026-02-19_chunking_C6.json  2026-02-19_chunking_C7.json  2026-02-20_C1_E1.json  2026-02-20_C1_E5.json  2026-02-20_C8_E0.json  2026-02-20_C8_E1.json  2026-02-20_C8_E2.json  2026-02-20_C8_E3.json  2026-02-20_C8_E4.json  2026-02-20_C8_E5.json  2026-02-20_chunking_C8.json  2026-02-23_C1_E0.json  2026-02-23_C1_E2.json  2026-02-23_C1_E3.json  2026-02-23_C1_E4.json  2026-02-24_C8_E5_H0.json  2026-02-24_C8_E5_H1.json  2026-02-24_C8_E5_H2.json  2026-02-24_C8_E5_H3.json  (+21 more)
server/scripts/: collect_cases.py  collect_laws.py  collect_regulations.py
server/test/: domain_law_rag.py  regulation_rag.py  test.py  test_multiagent.py
server/tests/: conftest.py
server/tests/test_agents/: test_eligibility_evaluator.py
(+159 files in other folders)
