[project]
name = "ai-agent-backend"
version = "0.1.0"
description = "FastAPI + LangGraph 기반 AI Agent Backend"
requires-python = ">=3.12,<3.13"

dependencies = [
  # API Server
  "fastapi==0.128.*",
  "uvicorn[standard]==0.40.*",
  # Config & Validation
  "pydantic==2.12.*",
  "pydantic-settings==2.12.*",
  # LLM / Agent
  "langgraph==1.0.5",
  "langchain==1.2.*",
  "langchain-openai==1.1.*",
  "openai==2.14.0",
  # Utils
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "tenacity>=8.3.0",
  "langchain-community==0.4.1",
  # Vector DB
  "chromadb>=0.5.0",
  "langchain-chroma>=0.2.0",
  "gdown>=5.2.1",
  "sentence-transformers>=3.0.0",
  # Supabase & File Upload
  "supabase>=2.0.0",
  "python-multipart>=0.0.9",
  # HWP Parsing
  "olefile>=0.47",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
]

[tool.uv]
package = false

[tool.uv.sources]
# 필요 시 private repo나 로컬 패키지 추가 가능

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "scripts*", "test*"]

[tool.pyright]
extraPaths = ["."]
exclude = ["data", "scripts"]
typeCheckingMode = "basic"  # standard → basic (완화)
reportMissingImports = false
reportOptionalMemberAccess = false
reportArgumentType = false
reportGeneralTypeIssues = false
reportReturnType = false
reportAttributeAccessIssue = false
reportIndexIssue = false
reportCallIssue = false
reportOperatorIssue = false
reportOptionalSubscript = false

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E402"]  # 라인 길이, import 위치 무시

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.14.14",
]
