[project]
name = "ai-agent-backend"
version = "0.1.0"
description = "FastAPI + LangGraph 기반 AI Agent Backend"
requires-python = ">=3.12,<3.13"

dependencies = [
  # API Server
  "fastapi==0.128.*",
  "uvicorn[standard]==0.40.*",
  # Config & Validation
  "pydantic==2.12.*",
  "pydantic-settings==2.12.*",
  # LLM / Agent
  "langgraph==1.0.5",
  "langchain==1.2.*",
  "langchain-openai==1.1.*",
  "openai==2.14.0",
  # Utils
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  # Vector DB
  "chromadb>=0.5.0",
  "langchain-chroma>=0.2.0",
  # Supabase & File Upload
  "supabase>=2.0.0",
  "python-multipart>=0.0.9",
  # HWP Parsing
  "olefile>=0.47",
  # Auth
  "pyjwt>=2.10.1",
  # RAG Evaluation
  "ragas>=0.2.0",
]

[tool.uv]
package = false

[tool.uv.sources]
# 필요 시 private repo나 로컬 패키지 추가 가능

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "scripts*", "test*"]

[tool.pyright]
extraPaths = ["."]
exclude = ["data", "scripts"]
typeCheckingMode = "basic"

# 중요 검사 - 활성화 권장 (코드 개선 후 true로 변경)
reportMissingImports = false      # 외부 라이브러리 타입 문제
reportOptionalMemberAccess = false # Optional 타입 접근 - 향후 활성화 권장
reportOptionalSubscript = false    # Optional 인덱싱 - 향후 활성화 권장

# 덜 중요한 검사 - 비활성화 유지
reportArgumentType = false         # 라이브러리 타입 불일치
reportGeneralTypeIssues = false    # 일반 타입 이슈
reportReturnType = false           # 반환 타입 불일치
reportAttributeAccessIssue = false # 속성 접근 이슈
reportIndexIssue = false           # 인덱스 타입 이슈
reportCallIssue = false            # 호출 시그니처 불일치
reportOperatorIssue = false        # 연산자 타입 불일치

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E402"]  # 라인 길이, import 위치 무시

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]
